// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Label renders with different Colours 1`] = `
<div
  className="flex justify-around items-center w-full"
>
  <span
    className="sc-hDiigY kQAoVu"
  >
    Medium
  </span>
  <span
    className="sc-hDiigY jhItbk"
    color="piccolo.100"
  >
    Medium
  </span>
  <span
    className="sc-hDiigY gezXzt"
    color="goten.100"
  >
    Medium
  </span>
</div>
`;

exports[`Label renders with different Sizes 1`] = `
<div
  className="flex justify-around items-center w-full"
>
  <span
    className="sc-hDiigY dqZjoA"
    size="small"
  >
    Small
  </span>
  <span
    className="sc-hDiigY kQAoVu"
  >
    Medium
  </span>
</div>
`;

exports[`Label renders with different SizesList 1`] = `
<div
  className="flex flex-col justify-around items-center w-full"
>
  <div
    className="flex justify-around items-center w-full mb-4"
  >
    <span
      className="sc-hDiigY dqZjoA"
      size="small"
    >
      Small
    </span>
    <span
      className="sc-hDiigY dqZjoA"
      size="small"
    >
      <span
        className="sc-ibMOqO hZkxTI"
      >
        <svg
          className="sc-iVKqUL"
          fill="none"
          height="1em"
          viewBox="0 0 32 32"
          width="1em"
          xmlns="http://www.w3.org/2000/svg"
        >
          <path
            d="M16 21.278v-6.334m0-2.638v-1.584M25.5 16a9.5 9.5 0 11-19 0 9.5 9.5 0 0119 0z"
            stroke="currentColor"
            strokeLinecap="round"
            strokeLinejoin="round"
          />
        </svg>
      </span>
      Small
    </span>
    <span
      className="sc-hDiigY dqZjoA"
      size="small"
    >
      Small
      <span
        className="sc-dFUPQr ejosUY"
      >
        <svg
          className="sc-gwvkYY"
          fill="none"
          height="1em"
          viewBox="0 0 32 32"
          width="1em"
          xmlns="http://www.w3.org/2000/svg"
        >
          <path
            d="M7 7l9 9m0 0l-9 9m9-9l9 9m-9-9l9-9"
            stroke="currentColor"
            strokeLinecap="round"
            strokeLinejoin="round"
          />
        </svg>
      </span>
    </span>
    <span
      className="sc-hDiigY dqZjoA"
      size="small"
    >
      <span
        className="sc-ibMOqO hZkxTI"
      >
        <svg
          className="sc-iVKqUL"
          fill="none"
          height="1em"
          viewBox="0 0 32 32"
          width="1em"
          xmlns="http://www.w3.org/2000/svg"
        >
          <path
            d="M16 21.278v-6.334m0-2.638v-1.584M25.5 16a9.5 9.5 0 11-19 0 9.5 9.5 0 0119 0z"
            stroke="currentColor"
            strokeLinecap="round"
            strokeLinejoin="round"
          />
        </svg>
      </span>
      Small
      <span
        className="sc-dFUPQr ejosUY"
      >
        <svg
          className="sc-gwvkYY"
          fill="none"
          height="1em"
          viewBox="0 0 32 32"
          width="1em"
          xmlns="http://www.w3.org/2000/svg"
        >
          <path
            d="M7 7l9 9m0 0l-9 9m9-9l9 9m-9-9l9-9"
            stroke="currentColor"
            strokeLinecap="round"
            strokeLinejoin="round"
          />
        </svg>
      </span>
    </span>
  </div>
  <div
    className="flex justify-around items-center w-full"
  >
    <span
      className="sc-hDiigY kQAoVu"
    >
      Medium
    </span>
    <span
      className="sc-hDiigY kQAoVu"
    >
      <span
        className="sc-ibMOqO hZkxTI"
      >
        <svg
          className="sc-iVKqUL"
          fill="none"
          height="1em"
          viewBox="0 0 32 32"
          width="1em"
          xmlns="http://www.w3.org/2000/svg"
        >
          <path
            d="M16 21.278v-6.334m0-2.638v-1.584M25.5 16a9.5 9.5 0 11-19 0 9.5 9.5 0 0119 0z"
            stroke="currentColor"
            strokeLinecap="round"
            strokeLinejoin="round"
          />
        </svg>
      </span>
      Medium
    </span>
    <span
      className="sc-hDiigY kQAoVu"
    >
      Medium
      <span
        className="sc-dFUPQr ejosUY"
      >
        <svg
          className="sc-gwvkYY"
          fill="none"
          height="1em"
          viewBox="0 0 32 32"
          width="1em"
          xmlns="http://www.w3.org/2000/svg"
        >
          <path
            d="M7 7l9 9m0 0l-9 9m9-9l9 9m-9-9l9-9"
            stroke="currentColor"
            strokeLinecap="round"
            strokeLinejoin="round"
          />
        </svg>
      </span>
    </span>
    <span
      className="sc-hDiigY kQAoVu"
    >
      <span
        className="sc-ibMOqO hZkxTI"
      >
        <svg
          className="sc-iVKqUL"
          fill="none"
          height="1em"
          viewBox="0 0 32 32"
          width="1em"
          xmlns="http://www.w3.org/2000/svg"
        >
          <path
            d="M16 21.278v-6.334m0-2.638v-1.584M25.5 16a9.5 9.5 0 11-19 0 9.5 9.5 0 0119 0z"
            stroke="currentColor"
            strokeLinecap="round"
            strokeLinejoin="round"
          />
        </svg>
      </span>
      Medium
      <span
        className="sc-dFUPQr ejosUY"
      >
        <svg
          className="sc-gwvkYY"
          fill="none"
          height="1em"
          viewBox="0 0 32 32"
          width="1em"
          xmlns="http://www.w3.org/2000/svg"
        >
          <path
            d="M7 7l9 9m0 0l-9 9m9-9l9 9m-9-9l9-9"
            stroke="currentColor"
            strokeLinecap="round"
            strokeLinejoin="round"
          />
        </svg>
      </span>
    </span>
  </div>
</div>
`;
